--- a/src/app/shell/navigatiion-menu/navigatiion-menu.component.html
+++ b/src/app/shell/navigatiion-menu/navigatiion-menu.component.html
@@ -1,3 +1,11 @@
 <div>
   navigatiion-menu
+  <ul>
+    <li>
+      <button (click)="IssueCommand1()">command 1</button>
+    </li>
+    <li>
+      <button (click)="IssueCommand2()">command 2</button>
+    </li>
+  </ul>
 </div>
